<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        tools:context=".AddProductActivity">

        <TextView
            android:id="@+id/tv_fp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_add"
            android:textSize="24sp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

<!--        <TextView-->
<!--            android:id="@+id/tv_select_cat"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Select a Category:"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginBottom="16dp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tv_fp" />-->


<!--        <Spinner-->
<!--            android:id="@+id/catagory_selector"-->
<!--            style="@style/MySpinnerStyle"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="4dp"-->
<!--            android:spinnerMode="dropdown"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tv_select_cat"-->
<!--            tools:layout_editor_absoluteX="-5dp" />-->

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_the_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fp"
            app:layout_constraintVertical_bias="0.024"
            tools:layout_editor_absoluteX="2dp"
            tools:ignore="MissingConstraints" />

<!--        <TextView-->
<!--            android:id="@+id/tv_name_ex"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Example: A Samsung smartphone, blue colour umbrella."-->
<!--            android:textColor="#6A6A6A"-->
<!--            android:textSize="10dp"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/tv_item_name"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="@+id/tv_item_name"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tv_item_name" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/product_name"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <TextView-->
<!--            android:id="@+id/tv_description"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Describe the item"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/ti_lay"-->
<!--            app:layout_constraintVertical_bias="0.025" />-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/ti_lay_description"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:hint="Description"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="1.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tv_description">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/et_post_description"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="start|top"-->
<!--                android:inputType="textMultiLine"-->
<!--                android:minHeight="84dp" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <TextView-->
<!--            android:id="@+id/tv_date"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="When it lost?"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/ti_lay_description"-->
<!--            app:layout_constraintVertical_bias="0.023" />-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/ti_lay_date"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:hint="Date (DD/MM/YYYY)"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="1.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tv_date">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/et_date"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="text" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <TextView-->
<!--            android:id="@+id/tv_location"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Where it lost?"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/ti_lay_date"-->
<!--            app:layout_constraintVertical_bias="0.039" />-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/ti_lay_location"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:hint="Location"-->

<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="1.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tv_location">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/et_post_location"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="text" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <TextView
            android:id="@+id/tv_qn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_lay"
            app:layout_constraintVertical_bias="0.039" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_lay_mbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/quantity"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_qn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_selectedImage"
            android:layout_width="373dp"
            android:layout_height="294dp"
            android:layout_marginTop="108dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_lay_mbl"
            app:srcCompat="@drawable/upload_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_uploadimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cornerRadius="12dp"
            android:layout_marginBottom="40dp"
            android:text="@string/upload_image_if_you_have_any"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_product"
            app:layout_constraintEnd_toEndOf="@+id/iv_selectedImage"
            app:layout_constraintStart_toStartOf="@+id/iv_selectedImage"
            app:layout_constraintTop_toBottomOf="@+id/iv_selectedImage"
            app:layout_constraintVertical_bias="0.003" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            app:cornerRadius="12dp"
            android:text="@string/add_product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>